RESOLVED FIXED259598
Fix assertion failure in InteractionRegion::isOverlay
https://bugs.webkit.org/show_bug.cgi?id=259598
Summary Fix assertion failure in InteractionRegion::isOverlay
Etienne
Reported 2023-07-28 09:33:14 PDT
Fix assertion failure in InteractionRegion::isOverlay
Attachments
Etienne
Comment 1 2023-07-28 09:36:51 PDT
Etienne
Comment 2 2023-07-28 09:37:15 PDT
EWS
Comment 3 2023-07-28 12:21:55 PDT
Committed 266395@main (b39b69a2ef1b): <https://commits.webkit.org/266395@main> Reviewed commits have been landed. Closing PR #16168 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.