Fix assertion failure in InteractionRegion::isOverlay https://bugs.webkit.org/show_bug.cgi?id=259598 <rdar://113037867>

Reviewed by Tim Horton.

We're not supposed to use `firstChildBox()` if the first child might be
of another type. Using `firstChild()` directly instead.

* Source/WebCore/page/InteractionRegion.cpp:
(WebCore::isOverlay):

Canonical link: https://commits.webkit.org/266395@main